# CISSN

./: .gitignore  CLAUDE.md  README.md  benchmark_encoder.py  document.md  plan.md  pyproject.toml  requirements.txt  setup.py
architecture/: architecture_and_flow.md  publication_strategy.md
cissn/: __init__.py  constants.py
cissn/baselines/: __init__.py  deep_ensemble.py  deepstate.py  dlinear.py  flat_conformal.py  mc_dropout.py  patchtst.py  training.py
cissn/conformal/: state_conditional.py
cissn/data/: __init__.py  data_loader.py  dataset.py  registry.py
cissn/evaluation/: __init__.py  metrics.py  plots.py
cissn/explanations/: state_attribution.py
cissn/losses/: __init__.py  disentangle_loss.py
cissn/models/: __init__.py  _dynamics.py  encoder.py  forecast_head.py
cissn/utils/: early_stopping.py
config_examples/: README.md
docs/: cissn_intuition.md  cissn_technical_specification.md  datasets_info.md  flow_diagram.md  improvements.md
examples/: basic_classification.py  demo_cissn.py
experiments/: experiment_plan.md  run_ablation.py  run_baseline.py  run_benchmark.py  run_multiseed.py
experiments/configs/: base.yaml  etth1_smoke.yaml
manuscript/: README.md  paper1_experiment_todo.md
publication/: arxiv_v1_experiment.md  paper1_framework.md  paper1_proofs.tex  paper2_application.md
scripts/: download_datasets.py
tests/: test_components.py  test_experiment_runners.py  test_model.py  test_training.py  test_utils.py
